<resources>
    <string name="app_name">SimplePay</string>
    <string name="api_error">Система временно недоступна</string>

    <string name="empty_string"></string>

    <string name="dialog_ok">OK</string>
    <string name="dialog_cancel">Отмена</string>

    <string name="internet_permission_error">Приложение не может продолжать работу без доступа к интернету.</string>

    <string name="amount_pattern">%1$.2f BYN</string>

    <string name="root_warning_dialog_title">На устройстве имеется root доступ.</string>
    <string name="root_warning_dialog_text">Настоятельно не рекомендуем использовать это приложение! \nЗлоумышленники могут получить доступ к Вашим данным!</string>

    <string name="main_activity_title">Мои карты</string>
    <string name="main_activity_delete_card_confirmation">Вы действительно хотите удалить карту?</string>

    <string name="add_card_activity_title">Добавить карту</string>
    <string name="add_card_activity_card_number">Номер карты</string>
    <string name="add_card_activity_holder_name">Имя владельца</string>
    <string name="add_card_activity_cvv">CVV</string>
    <string name="add_card_activity_add_button">Далее</string>

    <string name="add_card_empty_number_error">Поле \"Номер карты\" не может быть пустым</string>
    <string name="add_card_empty_holder_error">Поле \"Имя влядельца\" не может быть пустым</string>
    <string name="add_card_empty_cvv_error">Поле \"CVV\" не может быть пустым</string>
    <string name="add_card_length_cvv_error">Длина \"CVV\" должна быть %d</string>
    <string name="add_card_invalid_credentials_error">Введены неверные данные</string>
    <string name="add_card_already_added_error">Карта уже добавлена</string>
    <string name="add_card_not_exists_error">Такой карты нет в системе</string>

    <string name="confirm_code_activity_title">Подтверждение пин-кода</string>
    <string name="confirm_code_label">Мы отправили код на ваш email. Введите его и нажмите \"Подтвердить\".</string>
    <string name="confirm_code_button">Подтвердить</string>
    <string name="confirm_code_card_added">Карта успешно добавлена!</string>

    <string name="confirm_card_code_empty_error">Код не может быть пустым</string>
    <string name="confirm_card_code_length_error">Длина кода должна быть %d</string>
    <string name="confirm_card_code_incorrect_error">Код введен неверно</string>

    <string name="payment_activity_title">Оплата</string>
    <string name="payment_card_info_pattern">№ карты:\n %s</string>
    <string name="payment_instruction">Поднесите устройство к терминалу</string>
    <string name="payment_update_tokens_pattern">Обновить токены\n (Осталось: %d)</string>
    <string name="payment_error">Произошла ошибка</string>
    <string name="payment_tokens_ended">На устройстве закончились токены. Требуется обновление.</string>

    <string name="refresh_tokens_success">Токены обновлены</string>
    <string name="refresh_tokens_failure">Не удалось обновить токены</string>
</resources>
