<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:toolbar="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

    <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            style="@style/Application.Toolbar.Default"
            android:layout_width="match_parent"
            android:layout_height="@dimen/common_header_height"
            toolbar:title="@string/add_card_activity_title" />

    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/padding_large"
                android:paddingTop="@dimen/padding_large"
                android:paddingEnd="@dimen/padding_large"
                android:paddingStart="@dimen/padding_large">

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/add_card_activity_card_number"
                    style="@style/Application.Label.Primary" />

            <EditText
                    android:id="@+id/number"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number" />

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/padding_normal"
                    android:text="@string/add_card_activity_holder_name"
                    style="@style/Application.Label.Primary" />

            <EditText
                    android:id="@+id/holderName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textCapCharacters" />

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/padding_normal"
                    android:text="@string/add_card_activity_bank_name"
                    style="@style/Application.Label.Primary" />

            <Spinner
                    android:id="@+id/bankName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            <TextView
                    android:text="@string/add_card_activity_cvv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/padding_normal"
                    style="@style/Application.Label.Primary" />

            <EditText
                    android:id="@+id/cvv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:maxLength="3" />

        </LinearLayout>


    </ScrollView>

    <Button
            android:id="@+id/add"
            style="@style/Application.Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/padding_normal"
            android:text="@string/add_card_activity_add_button" />


</LinearLayout>